# middleware

./: .gitignore  .gitignore.orig  README.md
3part/: README.md
OtherLanguages/c/logsys/: clogsys.cpp  example_logsys.c  logdef.c  logdef.h  logsys.h
OtherLanguages/c/middleware_base/: README.md  cmiddleware_base.cpp  cmiddleware_base.h  example_middleware_base.c
OtherLanguages/c/segmentation_pack/: csegmentation_pack.cpp  example_segmentation_pack.c  segmentation_pack.h
cmake/: CMakeLists.txt  Makefile
cmake/example/: loop_array  serializecpp  shared_memory  socket_io
config/: README.md  asio_client.xml  asio_server.xml  looparray_config.xml  lp_config.xml  shared_memory.xml  sm_config.xml  soio_client_config.xml  soio_server_config.xml
example/: example_compress_zlib.cpp  example_db.cpp  example_incidental.cpp  example_logsys.cpp  example_loop_array.cpp  example_middleware_base.c  example_middleware_base.cpp  example_protocol.cpp  example_segmentation_pack.cpp  example_segmentation_pack.cpp.bak.1  example_segmentation_pack.cpp.orig  example_serializecpp.cpp  example_shared_memory.cpp  example_socket_asio.cpp  example_socket_io.cpp  example_threadpool.cpp  example_threadpool.cpp.bak.1  loop_array.cpp  serializecpp.cpp  shared_memory.cpp  socket_io.cpp
extern_tools/: README.md
extern_tools/CreateProtocol/: CMakeLists.txt  CreateProtocol.pro  Makefile  addprotocol.cpp  addprotocol.h  addprotocol.ui  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  showprotocol.cpp  showprotocol.h  showprotocol.ui
middleware/loop_array/: loop_array_middleware.h  loop_array_middleware.hpp  loop_array_write_callback_helper.h  looparray.h  looparray.hpp
middleware/middleware_base/: cmiddleware_base.h  middleware_base.h  middleware_base.hpp
middleware/middleware_base/loop_array/: loop_array_middleware.hpp  loop_array_write_callback_helper.hpp  looparray.hpp
middleware/middleware_base/shared_memory/: mgt_shared_memory.hpp  shared_memory.hpp  shared_memory_base.hpp  shared_memory_client.hpp  shared_memory_middleware.hpp  shared_memory_server.hpp
middleware/middleware_base/socket_asio/: alonelist.hpp  close_socket_session.hpp  protocol_head_handle_base.hpp  socket_asio_base.hpp  socket_asio_mgt.hpp  socket_asio_server_arg.hpp  socket_asio_server_keep.hpp  socket_asio_session_base.hpp  socket_asio_session_keep.hpp  socket_asio_tcp_io_service_pool.hpp  socket_session_mapping.hpp
middleware/middleware_base/socket_io/: accept_key_socket.hpp  connect_key_socket.hpp  gateway_client.hpp  gateway_server.hpp  gateway_socket_base.hpp  lpthread.hpp  socket_head.hpp
middleware/shared_memory/: mgt_shared_memory.h  mgt_shared_memory.hpp  shared_memory.h  shared_memory_base.h  shared_memory_base.hpp  shared_memory_client.h  shared_memory_client.hpp  shared_memory_middleware.h  shared_memory_middleware.hpp  shared_memory_server.h  shared_memory_server.hpp
middleware/socket_asio/: alonelist.hpp  protocol_head_handle_base.h  socket_asio_session_base.h  socket_asio_session_base.hpp  socket_asio_tcp_io_service_pool.h  socket_asio_tcp_io_service_pool.hpp  socket_session_mapping.h
middleware/socket_io/: accept_key_socket.h  accept_key_socket.hpp  connect_key_socket.h  connect_key_socket.hpp  gateway_client.h  gateway_client.hpp  gateway_server.h  gateway_server.hpp  gateway_socket_base.h  gateway_socket_base.h.BASE.19073.h  gateway_socket_base.h.REMOTE.19073.h  gateway_socket_base.h.orig  gateway_socket_base.hpp  lpthread.h  socket_head.h
middleware/tools/compress_zlip/: compress_zlip.hpp
middleware/tools/db/: sql_middleware.cpp  sql_middleware.h  sql_middleware_const.h
middleware/tools/incidental/: check_crc.h  check_crc.hpp  pack_head.hpp
middleware/tools/logsys/: log.h  logdef.h  logdef.hpp  logsys.h  logsys.hpp
middleware/tools/protocol/: mgt_protocol.hpp  protocol.h  protocol_base.hpp  protocol_num.hpp
middleware/tools/segmentation_pack/: segmentation_pack.h  segmentation_pack.h.bak  segmentation_pack.hpp
middleware/tools/serializecpp/: mgt_serializecpp.hpp  serializecpp.h  serializecpp.hpp  serializecpp_buffer.h  serializecpp_buffer.hpp  serializecpp_class.h  serializecpp_class.hpp  serializecpp_fun.hpp  unserializecpp.h  unserializecpp.hpp
middleware/tools/threadpool/: threadpool.h  threadpool.hpp  threadpool.hpp.bak.1
problem/: README.md  cmiddleware_base.cpp  cmiddleware_base.h  example_middleware_base.c
problem/临时文件夹/: config.csv  csv_config.cpp  main.cpp  readconfig.cpp  readconfig.h
src/loop_array/: README.md  loop_array_middleware.cpp  looparray.cpp
src/loop_array/cmake/: CMakeLists.txt  loop_array
src/loop_array/cmake/Debug/: Makefile
src/loop_array/cmake/Release/: Makefile
src/loop_array/include/: loop_array_middleware.h  loop_array_write_callback_helper.h  looparray.h
src/loop_array/src/: loop_array_middleware.cpp  looparray.cpp  main.cpp
src/middleware_base/: README.md  cmiddleware_base.cpp  middleware_base.cpp
src/middleware_base/loop_array/: README.md  loop_array_middleware.cpp  looparray.cpp
src/middleware_base/shared_memory/: README.md
src/middleware_base/socket_asio/: README.md  close_socket_session.cpp  socket_asio_mgt.cpp  socket_asio_server_arg.cpp  socket_asio_server_keep.cpp  socket_asio_session_base.cpp  socket_asio_session_keep.cpp
src/middleware_base/socket_io/: README.md  accept_key_socket.cpp  connect_key_socket.cpp  socket_head.cpp
src/module_public/: loop_array_middleware.h  looparray.h  lpthread.h
src/shared_memory/: README.md
src/shared_memory/cmake/: CMakeLists.txt  shared_memory  shared_memoryD
src/shared_memory/include/: mgt_shared_memory.h  shared_memory.h  shared_memory_base.h  shared_memory_client.h  shared_memory_middleware.h  shared_memory_server.h
src/shared_memory/src/: main.cpp
src/socket_io/: README.md  accept_key_socket.cpp  connect_key_socket .cpp  connect_key_socket.cpp  socket_head.cpp
src/socket_io/cmake/: CMakeLists.txt  socket_io
src/socket_io/include/: accept_key_socket.cpp  (+7 more)
vs/vs2012/: middleware.sln
vs/vs2015/: middleware.sln
(+130 files in other folders)
